[gd_scene load_steps=60 format=3 uid="uid://bsy7vba3t8awq"]

[ext_resource type="Script" path="res://scenes/objects/players/bass.gd" id="1_lug7r"]
[ext_resource type="Shader" path="res://shaders/PaletteSwap.gdshader" id="2_m015p"]
[ext_resource type="Texture2D" uid="uid://c352q0axtprmr" path="res://sprites/players/bass/bass.png" id="3_gjpaj"]
[ext_resource type="Texture2D" uid="uid://bot48w7086agv" path="res://sprites/players/HurtStar.png" id="4_pn11x"]
[ext_resource type="Texture2D" uid="uid://8mdvvlmmrxfn" path="res://sprites/players/HurtSweat.png" id="5_sgfjj"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_bank.gd" id="8_tjlhw"]
[ext_resource type="AudioStream" uid="uid://bgfwytu8kifqv" path="res://sounds/blastjump.wav" id="8_xq33u"]
[ext_resource type="AudioStream" uid="uid://pk86bd6damih" path="res://sounds/start_bass.wav" id="9_e7if1"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_event_resource.gd" id="9_fd281"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qymoq"]
shader = ExtResource("2_m015p")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7773x"]
shader = ExtResource("2_m015p")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="Animation" id="Animation_rlpjp"]
length = 0.333333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [29]
}

[sub_resource type="Animation" id="Animation_uc8dv"]
resource_name = "Dead"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}

[sub_resource type="Animation" id="Animation_ibabb"]
length = 0.116686
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_govqx"]
resource_name = "FinShredder"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [53, 54, 55, 56]
}

[sub_resource type="Animation" id="Animation_edvn7"]
resource_name = "Hurt"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}

[sub_resource type="Animation" id="Animation_8pco5"]
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.33333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_7lbq7"]
length = 0.533333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [47, 48, 49]
}

[sub_resource type="Animation" id="Animation_3wyk4"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_17qx0"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [35]
}

[sub_resource type="Animation" id="Animation_ui02v"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [34]
}

[sub_resource type="Animation" id="Animation_7sw26"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [36]
}

[sub_resource type="Animation" id="Animation_xvx7x"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [33]
}

[sub_resource type="Animation" id="Animation_3sett"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [41, 42, 43]
}

[sub_resource type="Animation" id="Animation_kg8lw"]
length = 0.116686
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_a5vmh"]
length = 0.116686
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [31]
}

[sub_resource type="Animation" id="Animation_8uyj2"]
length = 0.533333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [50, 51, 52]
}

[sub_resource type="Animation" id="Animation_n5jw4"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [39]
}

[sub_resource type="Animation" id="Animation_tbuh8"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [38]
}

[sub_resource type="Animation" id="Animation_ayqyp"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [40]
}

[sub_resource type="Animation" id="Animation_ri60d"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [37]
}

[sub_resource type="Animation" id="Animation_uwqs6"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [44, 45, 46]
}

[sub_resource type="Animation" id="Animation_rc3eo"]
resource_name = "Ladder"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 72, 71]
}

[sub_resource type="Animation" id="Animation_a5pwf"]
resource_name = "Ladder-Shoot"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [77]
}

[sub_resource type="Animation" id="Animation_kwtfk"]
resource_name = "Ladder-Shoot Diagonal"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [76]
}

[sub_resource type="Animation" id="Animation_pnkuv"]
resource_name = "Ladder-Shoot Down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [78]
}

[sub_resource type="Animation" id="Animation_h6dsx"]
resource_name = "Ladder-Shoot Up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [75]
}

[sub_resource type="Animation" id="Animation_7hbn4"]
resource_name = "Ladder-Throw"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [79, 80, 81]
}

[sub_resource type="Animation" id="Animation_lauva"]
resource_name = "Ladder-Up"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [74]
}

[sub_resource type="Animation" id="Animation_lyowt"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [82, 83]
}

[sub_resource type="Animation" id="Animation_15kij"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}

[sub_resource type="Animation" id="Animation_lvb1v"]
length = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_8m6b5"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_beqyk"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 22, 21, 20, 19, 18, 17, 16]
}

[sub_resource type="Animation" id="Animation_uj5dp"]
length = 0.700117
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.116686, 0.233372, 0.350058, 0.466744, 0.583431),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_kc2kp"]
length = 0.700117
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.116686, 0.233372, 0.350058, 0.466744, 0.583431),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_knm54"]
_data = {
"Dash": SubResource("Animation_rlpjp"),
"Dead": SubResource("Animation_uc8dv"),
"Fall": SubResource("Animation_ibabb"),
"FinShredder": SubResource("Animation_govqx"),
"Hurt": SubResource("Animation_edvn7"),
"Idle": SubResource("Animation_8pco5"),
"Idle-Shield": SubResource("Animation_7lbq7"),
"Idle-Shoot": SubResource("Animation_3wyk4"),
"Idle-Shoot Steady": SubResource("Animation_17qx0"),
"Idle-Shoot Steady Diagonal": SubResource("Animation_ui02v"),
"Idle-Shoot Steady Down": SubResource("Animation_7sw26"),
"Idle-Shoot Steady Up": SubResource("Animation_xvx7x"),
"Idle-Throw": SubResource("Animation_3sett"),
"Jump": SubResource("Animation_kg8lw"),
"Jump Transition": SubResource("Animation_a5vmh"),
"Jump-Shield": SubResource("Animation_8uyj2"),
"Jump-Shoot": SubResource("Animation_n5jw4"),
"Jump-Shoot Diagonal": SubResource("Animation_tbuh8"),
"Jump-Shoot Down": SubResource("Animation_ayqyp"),
"Jump-Shoot Up": SubResource("Animation_ri60d"),
"Jump-Throw": SubResource("Animation_uwqs6"),
"Ladder": SubResource("Animation_rc3eo"),
"Ladder-Shoot": SubResource("Animation_a5pwf"),
"Ladder-Shoot Diagonal": SubResource("Animation_kwtfk"),
"Ladder-Shoot Down": SubResource("Animation_pnkuv"),
"Ladder-Shoot Up": SubResource("Animation_h6dsx"),
"Ladder-Throw": SubResource("Animation_7hbn4"),
"Ladder-Up": SubResource("Animation_lauva"),
"Mist Dash": SubResource("Animation_lyowt"),
"RESET": SubResource("Animation_15kij"),
"Step": SubResource("Animation_lvb1v"),
"Teleport": SubResource("Animation_8m6b5"),
"Teleport In": SubResource("Animation_beqyk"),
"Walk": SubResource("Animation_uj5dp"),
"Walk-Shoot": SubResource("Animation_kc2kp")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_biy2v"]
atlas = ExtResource("4_pn11x")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_oy1qg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biy2v")
}],
"loop": true,
"name": &"new_animation",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fomdo"]
atlas = ExtResource("5_sgfjj")
region = Rect2(0, 0, 26, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n3ss"]
atlas = ExtResource("5_sgfjj")
region = Rect2(0, 8, 26, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_52yde"]
atlas = ExtResource("5_sgfjj")
region = Rect2(0, 16, 26, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_0r7wu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fomdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n3ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52yde")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"active",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfqkg"]
size = Vector2(14, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvbnn"]
size = Vector2(16, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5nkw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrnae"]

[sub_resource type="Resource" id="Resource_0aldu"]
script = ExtResource("9_fd281")
name = "start"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("9_e7if1")])

[sub_resource type="Resource" id="Resource_5g5pw"]
script = ExtResource("9_fd281")
name = "blast_jump"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("8_xq33u")])

[node name="Bass" type="CharacterBody2D" groups=["player", "splash"]]
material = SubResource("ShaderMaterial_qymoq")
collision_layer = 2
collision_mask = 17
floor_constant_speed = true
script = ExtResource("1_lug7r")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7773x")
texture = ExtResource("3_gjpaj")
hframes = 84
frame = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_knm54")
}
autoplay = "Teleport"

[node name="FX" type="Node2D" parent="."]
position = Vector2(0, 2)
rotation = -3.14159
scale = Vector2(1, -1)

[node name="Starburst" type="AnimatedSprite2D" parent="FX"]
visible = false
sprite_frames = SubResource("SpriteFrames_oy1qg")
animation = &"new_animation"
autoplay = "new_animation"

[node name="Sweat" type="AnimatedSprite2D" parent="FX"]
position = Vector2(1.48619e-06, -17)
sprite_frames = SubResource("SpriteFrames_0r7wu")

[node name="MainHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_bfqkg")

[node name="SlideHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_cvbnn")
disabled = true

[node name="StateTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="InvulTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="PainTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="RapidTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = true

[node name="FireDelay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="CeilingCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 12)
target_position = Vector2(0, -12)

[node name="LadderCheck" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_i5nkw")
target_position = Vector2(0, 0)
max_results = 1
collide_with_areas = true
collide_with_bodies = false

[node name="TopLadderCheck" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_lrnae")
target_position = Vector2(0, 0)
max_results = 1

[node name="SoundBank" type="Node" parent="."]
script = ExtResource("8_tjlhw")
label = "bass"
bus = "Sound"
events = Array[ExtResource("9_fd281")]([SubResource("Resource_0aldu"), SubResource("Resource_5g5pw")])
